K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: student-app
  name: student-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
    spec:
      containers:
      - image: abhimudda/student-management-website:v1
        imagePullPolicy: Always
        name: student-app
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "500m"
            memory: "128Mi"
          limits:
            cpu: "750m"
            memory: "250Mi"
