K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: student-app
  name: student-service
spec:
  selector:
    app.kubernetes.io/name: app
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
